Explicitly specify branch for autotagging for jj-vcs compatibility

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,7 +11,7 @@ vars:
   # package is imported into other project and tool is build there, but we still need
   # to show proper version - let's deduce tag for next version automatically here,
   # otherwise it is easy to forget and we are always out of sync...
-  PRJ_VERSION: {sh: GOTOOLCHAIN=local+path go tool autotag -C -n}
+  PRJ_VERSION: {sh: GOTOOLCHAIN=local+path go tool autotag -C -n -b main}
 
   GO_VERSION_MIN_REQUIRED: '1.24.5'
 
